--- a/CreateTeam.css
+++ b/CreateTeam.css
@@ -25,9 +25,13 @@
 .teams {
   flex: 1;
   position: relative;
+  font-size: var(--font-size-sm);
   letter-spacing: -0.02em;
   line-height: 24px;
   font-weight: 600;
+  font-family: var(--font-plus-jakarta-sans);
+  color: var(--color-black);
+  text-align: left;
 }
 .overview,
 .overview1 {
@@ -41,10 +45,78 @@
   gap: var(--gap-xs);
 }
 .overview {
-  border-radius: var(--br-3xs);
-  background-color: var(--color-whitesmoke-200);
-  flex-direction: column;
+  cursor: pointer;
+  border: 0;
   padding: var(--padding-3xs) var(--padding-xl);
+  background-color: var(--color-whitesmoke-200);
+  border-radius: var(--br-3xs);
+  flex-direction: column;
+}
+.vuesaxlinearbook-icon {
+  height: 24px;
+  width: 24px;
+  position: relative;
+  min-height: 24px;
+}
+.all-task {
+  position: relative;
+  letter-spacing: -0.02em;
+  line-height: 24px;
+  font-weight: 600;
+  display: inline-block;
+  min-width: 49px;
+}
+.course {
+  border: none;
+  border-radius: var(--br-3xs);
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: var(--padding-3xs) 44px var(--padding-3xs) var(--padding-xl);
+  gap: var(--gap-xs);
+  white-space: nowrap;
+  color: var(--secondary-500);
+}
+.course:hover {
+  background-color: rgb(239, 239, 239);
+}
+.task-icon {
+  height: 26px;
+  width: 26px;
+  position: relative;
+  object-fit: cover;
+  min-height: 26px;
+}
+.my-task {
+  flex: 1;
+  position: relative;
+  font-size: var(--font-size-sm);
+  letter-spacing: -0.02em;
+  line-height: 24px;
+  font-weight: 600;
+  font-family: var(--font-plus-jakarta-sans);
+  color: var(--secondary-500);
+  text-align: left;
+}
+.course1 {
+  cursor: pointer;
+  border: 0;
+  padding: var(--padding-3xs) 35px var(--padding-3xs) var(--padding-xl);
+  background-color: var(--primary-0);
+  width: 149px;
+  border-radius: var(--br-3xs);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  gap: var(--gap-xs);
+  white-space: nowrap;
+}
+.course1:hover {
+  background-color: rgb(239, 239, 239);
 }
 .vuesaxlinearmessage-icon {
   height: 24px;
